--- a/assets/css/main_logged_out.css
+++ b/assets/css/main_logged_out.css
@@ -362,3 +362,9 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+* {
+  -webkit-border-radius: 0 !important;
+     -moz-border-radius: 0 !important;
+          border-radius: 0 !important;
+}
