--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,49 @@
    Author's custom styles
    ========================================================================== */
 
-@media(min-width: 1200px) {
-    .container {
-        width: 95%;
-    }
+* {
+  -webkit-border-radius: 0 !important;
+     -moz-border-radius: 0 !important;
+          border-radius: 0 !important;
 }
 
+body {
+    background: url(../img/main-bg.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+a {
+    color: #E3E3E3;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+a:hover,
+a:focus {
+    text-decoration: none;
+    color: #11505d;
+}
+
+.container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgba( 230, 230, 230, 0.2 );
+}
+
+.well {
+    background-color: rgba( 245, 245, 245, 0.2 );
+    border: rgba( 227, 227, 227, 0.2 );
+}
+
+@media(min-width: 1200px) {
+    
+}
 
 
 
