--- a/assets/css/main_logged_out.css
+++ b/assets/css/main_logged_out.css
@@ -56,6 +56,7 @@ p {
 }
 
 a {
+    color: #3B5998;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -64,7 +65,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #11505d;
+    color: #6D84B4;
 }
 
 .intro {
