--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,12 +3,16 @@
    ========================================================================== */
 
 * {
-  -webkit-border-radius: 0 !important;
-     -moz-border-radius: 0 !important;
-          border-radius: 0 !important;
+    border-radius: 0 !important;
+    -moz-border-radius: 0 !important;
+    -webkit-border-radius: 0 !important;
 }
 
 body {
+    width: 100%;
+    height: 100%;
+    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    background-color: #000;
     background: url(../img/main-bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -30,21 +34,79 @@ a:focus {
 }
 
 .container {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: rgba( 230, 230, 230, 0.2 );
 }
 
 .well {
+    margin-bottom: 10px;
     background-color: rgba( 245, 245, 245, 0.2 );
     border: rgba( 227, 227, 227, 0.2 );
 }
 
-@media(min-width: 1200px) {
-    
+div#fineprint {
+    padding-left: 20px;
 }
+
+/* Extra Small Devices, Phones */
+@media(max-width: 767px) {
+    .container {
+        width: 100%;
+    }
+}
+
+/* Small Devices, Tablets */
+@media(min-width: 768px) {
+    .container {
+        width: 100%;
+    }
+}
+
+/* Medium Devices, Desktops */
+@media(min-width: 992px) {
+    .container {
+        width: 100%;
+    }
+}
+
+/* Large Devices, Desktops */
+@media(min-width: 1200px) {
+    div {
+        height: 100%;
+    }
+
+    .container {
+        width: 1170px;
+        height: 630px;
+    }
+
+    div#visualizations {
+        height: 300px;
+    }
+
+    div#interactions {
+        height: 300px;
+    }
+
+    div#tabs ul {
+        margin: 0em 0px;
+    }
+
+    div#tabContent {
+        overflow-y: scroll;
+    }
+
+    div#fineprint {
+        width: 1170px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
 
 
 
