--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,11 @@
     -webkit-border-radius: 0 !important;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     width: 100%;
     height: 100%;
