--- a/assets/css/main_logged_out.css
+++ b/assets/css/main_logged_out.css
@@ -45,8 +45,7 @@ h6 {
 
 p {
     margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
+    font-size: 25px;
 }
 
 a {
@@ -81,12 +80,27 @@ a:focus {
 }
 
 .intro .intro-body .intro-text {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 div#main-content {   
     padding: 20px;
     background-color: rgba(25, 25, 25, 0.5);
+}
+
+@media(min-width:767px) {
+    .intro {
+        height: 100%;
+        padding: 0;
+    }
+
+    .intro .intro-body .brand-heading {
+        font-size: 100px;
+    }
+
+    .intro .intro-body .intro-text {
+        font-size: 25px;
+    }
 }
 
 @-webkit-keyframes pulse {    
@@ -140,7 +154,6 @@ div#main-content {
 .btn-default:hover,
 .btn-default:focus {
     border: 1px solid #3B5998;
-    outline: 0;
     color: #000;
     background-color: #3B5998;
 }
