--- a/assets/css/main_logged_out.css
+++ b/assets/css/main_logged_out.css
@@ -23,7 +23,7 @@ body {
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #000;
-    background: url(../img/updownfire.gif) no-repeat center center fixed;
+    background: url(../img/updownfire.gif) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
