--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,8 +18,11 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000;
-    background: url(../img/main-bg.jpg) no-repeat center center scroll;
+    background-color: #000;    
+    background-image: url(../img/updownfire.gif);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
