--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;    
-    background-image: url(../img/updownfire.gif);
+    background-image: url(../img/main-bg.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
