--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,18 +11,17 @@
 html {
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: transparent;
 }
 
 body {
     width: 100%;
-    height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;    
     background-image: url(../img/main-bg.jpg);
     background-repeat: no-repeat;
     background-position: center center;
-    background-attachment: scroll;
+    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
