--- a/assets/css/main_logged_out.css
+++ b/assets/css/main_logged_out.css
@@ -14,19 +14,17 @@
 html {
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: transparent;
 }
 
 body {
     width: 100%;
-    height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
-    background-color: #000;
     background-image: url(../img/updownfire.gif);
     background-repeat: no-repeat;
     background-position: center center;
-    background-attachment: scroll;
+    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
