--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -27,6 +26,10 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+i.fa {
+    margin: 0;
 }
 
 a {
