--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@ html {
 
 body {
     width: 100%;
+    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;    
     background-image: url(../img/main-bg.jpg);
     background-repeat: no-repeat;
