--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,11 @@ a:hover, a:focus {
     background-color: rgba( 230, 230, 230, 0.2 );
 }
 
+pre {
+    border: transparent;
+    background-color: transparent;
+}
+
 div#tabs ul {
     margin: 0em 0px;
 }
@@ -102,25 +107,38 @@ div#fineprint {
         height: 100%;
     }
 
+    body {
+        height: 90%;
+    }
+
     .container {
         width: 1170px;
-        height: 630px;
     }
 
     div#visualizations {
-        height: 300px;
+        height: 50%;
+        margin-bottom: 10px;
+    }
+
+    div#balanceInformation {
+        overflow-y: scroll;
     }
 
     div#interactions {
-        height: 300px;
+        height: 50%;
+        padding-bottom: 10px;
     }
 
     div#tabs {
         text-align: left;
     }
     
-    div#tabContent {
+    div#tabContent, div#activeUsers {
         overflow-y: scroll;
+    }
+
+    div#fineprint {
+        height: auto;
     }
 }
 
