--- a/assets/css/main_logged_out.css
+++ b/assets/css/main_logged_out.css
@@ -4,13 +4,6 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-* {
-
-  border-radius: 0 !important;
- -moz-border-radius: 0 !important;
-  -webkit-border-radius: 0 !important;
-}
-
 html {
     width: 100%;
     height: 105%;
@@ -60,6 +53,26 @@ a:hover,
 a:focus {
     text-decoration: none;
     color: #6D84B4;
+}
+
+div.tooltip.in {
+    opacity: 1.0;
+}
+
+div.tooltip-inner {
+    max-width: none;
+    background-color: orange;
+}
+
+div.tooltip-arrow {
+    border-top-color: orange !important;
+}
+
+
+.unround {
+  border-radius: 0 !important;
+ -moz-border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
 }
 
 .intro {
