--- a/assets/css/main_logged_out.css
+++ b/assets/css/main_logged_out.css
@@ -15,7 +15,7 @@ body {
     width: 100%;
     height: 100%;
     color: #fff;
-    background-image: url(../img/updownfire.gif);
+    background-image: url(../img/nasdaq.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
